--- a/src/TiceWEB/Views/Home/CrearCapa.cshtml
+++ b/src/TiceWEB/Views/Home/CrearCapa.cshtml
@@ -1,135 +1,143 @@
-﻿
+﻿@section styles{
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+}
+
 <div class="site-content">
     <div class="container-fluid">
 
         <!-- Inicio cuerpo -->
-        <button type="button" class="btn btn-default">Cancelar</button>
+        <button type="button" class="btn btn-default" id="btnCancelar">Cancelar</button>
         <button type="button" class="btn btn-primary" id="btnGuardarCapacitacion">Guardar</button>
         <br /><br />
         <ul class="nav nav-tabs">
-            <li class="active"><a asp-controller="Home" asp-action="CrearCapa">Ajustes Generales</a></li>
-            <li><a asp-controller="Home" asp-action="CrearCapa2">Taller & Materiales</a></li>
-            <li><a asp-controller="Home" asp-action="CrearCapa3">Participantes</a></li>
+            <li class="active"><a onclick="javascript:crearCapa()">Ajustes Generales</a></li>
+            <li><a onclick="javascript:crearTallerMaterial()">Taller & Materiales</a></li>
+            <li><a onclick="javascript:crearParticipante()">Participantes</a></li>
         </ul>
 
-        <div class="panel panel-default">
-            <div class="panel-heading"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Detalles</div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Nombre Capacitación</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <input class="form-control" type="text" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Certificado Capacitación</label>
-                    </div>
-                    <div class="col-xs-12 col-md-1 form-group">
-                        <input class="form-control" type="checkbox" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Periodo</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <select class="form-control" id="sel1">
-                            <option selected> Seleccione </option>
-                            <option>Short Option</option>
-                            <option>This Is A Longer Option</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Descripción</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <textarea class="form-control" rows="3"></textarea>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Capacitación Activo</label>
-                    </div>
-                    <div class="col-xs-12 col-md-1 form-group">
-                        <input class="form-control" type="checkbox" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Lugar</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <input class="form-control" type="text" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Fecha</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <input class="form-control" type="text" id="datepicker1">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Hora</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <input class="form-control" type="text" placeholder="00:00:00" />
-                    </div>
-                </div>
-            </div>
-        </div>
+        <input type="hidden" value="@ViewData["codigoCapa"]" name="codigoCapa" id="codigoCapa" />
 
-        <div class="panel panel-default">
-            <div class="panel-heading"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Comunicación</div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Correo electrónico de contacto de la capacitación</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <input class="form-control" type="text" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Enviar notificaciónes a participantes</label>
-                    </div>
-                    <div class="col-xs-12 col-md-1 form-group">
-                        <input class="form-control" type="checkbox" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Periodicidad de envío</label>
-                    </div>
-                    <div class="col-xs-12 col-md-6 form-inline">
-                        <div class="input-group spinner">
-                            <input type="text" class="form-control" value="42">
-                            <div class="input-group-btn-vertical">
-                                <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
-                                <button class="btn btn-default" type="button"><i class="fa fa-caret-down"></i></button>
-                            </div>
+        <form id="guardarCapacitacion">
+
+            <div class="panel panel-default">
+                <div class="panel-heading"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Detalles</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Nombre Capacitación</label>
                         </div>
-                        <span>días</span>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <input class="form-control" type="text" id="inputCapaNombre"/>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-4 form-group">
-                        <label>Fecha de Inicio envío</label>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Certificado Capacitación</label>
+                        </div>
+                        <div class="col-xs-12 col-md-1 form-group">
+                            <input class="form-control" type="checkbox" id="inputCapaCertificado"/>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-md-6 form-group">
-                        <input class="form-control" type="text" id="datepicker2">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Periodo</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <select class="form-control" id="selectCapaPeriodo">
+                                <option value="" selected> Seleccione </option>
+                                <option value="13">Short Option</option>
+                                <option value="14">This Is A Longer Option</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Descripción</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <textarea class="form-control" rows="3" id="textareaCapaDescripcion"></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Capacitación Activo</label>
+                        </div>
+                        <div class="col-xs-12 col-md-1 form-group">
+                            <input class="form-control" type="checkbox" id="inputCapaActivo"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Lugar</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <input class="form-control" type="text" id="inputCapaLugar"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Fecha</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <input class="form-control" type="text" id="inputCapaFechaCapa">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Hora</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <input class="form-control" type="text" placeholder="00:00:00" id="inputCapaHora"/>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Comunicación</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Correo electrónico de contacto de la capacitación</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <input class="form-control" type="text" id="inputCapaCorreo"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Enviar notificaciónes a participantes</label>
+                        </div>
+                        <div class="col-xs-12 col-md-1 form-group">
+                            <input class="form-control" type="checkbox" id="inputCapaEnviarNoti"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Periodicidad de envío</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-inline">
+                            <div class="input-group spinner">
+                                <input type="text" class="form-control" value="42" id="inputCapaPeriodicidad">
+                                <div class="input-group-btn-vertical">
+                                    <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
+                                    <button class="btn btn-default" type="button"><i class="fa fa-caret-down"></i></button>
+                                </div>
+                            </div>
+                            <span>días</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-4 form-group">
+                            <label>Fecha de Inicio envío</label>
+                        </div>
+                        <div class="col-xs-12 col-md-6 form-group">
+                            <input class="form-control" type="text" id="inputCapaFechaInicio">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
         <!-- Fin cuerpo -->
     </div>
 </div>
