--- a/src/TiceWEB/Views/Home/CrearCapa3.cshtml
+++ b/src/TiceWEB/Views/Home/CrearCapa3.cshtml
@@ -3,34 +3,35 @@
     <div class="container-fluid">
 
         <!-- Inicio cuerpo -->
-        <button type="button" class="btn btn-default">Cancelar</button>
-        <button type="button" class="btn btn-primary">Guardar</button>
+        <button type="button" class="btn btn-default" id="btnCancelar">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="btnGuardarCapacitacion">Guardar</button>
         <br /><br />
         <ul class="nav nav-tabs">
-            <li><a asp-controller="Home" asp-action="CrearCapa">Ajustes Generales</a></li>
-            <li><a asp-controller="Home" asp-action="CrearCapa2">Taller & Materiales</a></li>
-            <li class="active"><a asp-controller="Home" asp-action="CrearCapa3">Participantes</a></li>
+            <li><a onclick="javascript:crearCapa()">Ajustes Generales</a></li>
+            <li><a onclick="javascript:crearTallerMaterial()">Taller & Materiales</a></li>
+            <li class="active"><a onclick="javascript:crearParticipante()">Participantes</a></li>
         </ul>
 
         <div class="panel panel-default">
             <div class="panel-heading"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Lista Participantes</div>
             <div class="panel-body">
 
-                <button type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Añadir Taller
-                </button>
-                <br><br>
+                <input type="hidden" value="@ViewData["codigoCapa"]" name="codigoCapa" id="codigoCapa" />
+
                 <div class="row">
-                    <div class="col-xs-12 col-md-8 form-inline">
+                    <div class="col-xs-12 col-md-12 form-inline">
                         <label>Nombre Docente: </label>
+                        <label> </label>
                         <input class="form-control" type="text" />
                     </div>
                 </div>
 
+                <input type="hidden" id="participanteSelected" name="participanteSelected"/>
+
                 <div class="row">
                     <div class="col-xs-12 col-md-8">
                         <div class="table-responsive">
-                            <table class="table table-striped">
+                            <table id="tblParticipantes" class="table table-striped">
                                 <thead>
                                     <tr>
                                         <th><div class="checkbox"><label><input type="checkbox"></label></div></th>
@@ -38,37 +39,14 @@
                                         <th>Nombre del Docente</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="tBodyResult">
+                                    <!--
                                     <tr>
                                         <td><div class="checkbox"><label><input type="checkbox"></label></div></td>
                                         <td>Giacomo</td>
                                         <td>Guilizzoni</td>
                                     </tr>
-                                    <tr>
-                                        <td><div class="checkbox"><label><input type="checkbox"></label></div></td>
-                                        <td>Guido Jack</td>
-                                        <td>Guilizzoni</td>
-                                    </tr>
-                                    <tr>
-                                        <td><div class="checkbox"><label><input type="checkbox"></label></div></td>
-                                        <td>Mariah</td>
-                                        <td>Maclachlan</td>
-                                    </tr>
-                                    <tr>
-                                        <td><div class="checkbox"><label><input type="checkbox"></label></div></td>
-                                        <td>Giacomo</td>
-                                        <td>Guilizzoni</td>
-                                    </tr>
-                                    <tr>
-                                        <td><div class="checkbox"><label><input type="checkbox"></label></div></td>
-                                        <td>Guido Jack</td>
-                                        <td>Guilizzoni</td>
-                                    </tr>
-                                    <tr>
-                                        <td><div class="checkbox"><label><input type="checkbox"></label></div></td>
-                                        <td>Mariah</td>
-                                        <td>Maclachlan</td>
-                                    </tr>
+                                    -->                                    
                                 </tbody>
                             </table>
                         </div>
@@ -129,3 +107,8 @@
     </div>
 </div>
 <!-- Fin Modal -->
+
+@section scripts{
+    <script src="~/js/notie.js"></script>
+    <script src="~/js/crearcapa3.js"></script>
+}
