--- a/src/TiceWEB/Views/Shared/_Layout.cshtml
+++ b/src/TiceWEB/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
         <link rel="stylesheet" href="~/css/main.css">
         <link rel="stylesheet" href="~/css/nav-main.css">
 
+        @RenderSection("styles", required: false)
+
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
